# pgr-semestralka

./: CMakeLists.txt
imgui/src/: imgui_impl_glfw_gl3.cpp
shd/: axis.frag  axis.vert  outline.frag  outline.vert  simple.frag  simple.vert  unicolor.frag
src/: main.cpp
